# conv-kan-stellar

./: .gitattributes  .gitignore  LICENSE  README.md  env.yml  pyproject.toml
app/: inference.py  samples.py  streamlit_app.py
configs/: multi_survey.yaml  sdss_only.yaml  smoke.yaml
scripts/: aggregate_results.py  download_apogee.py  download_lamost.py  download_sdss.py  preprocess.py  run_seed_sweep.sh  smoke_test.py
src/csnet/: __init__.py  data.py  losses.py  models.py  train.py  utils.py  xai.py
tests/: test_models.py
